--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "scripts": {
     "develop": "node -r esm index.js",
+    "create": "node -r esm create.js",
+    "purge": "node -r esm purge.js",
+    "browse": "node -r esm index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,8 +21,10 @@
   },
   "homepage": "https://github.com/ojeytonwilliams/trying-ghost-api#readme",
   "devDependencies": {
+    "@tryghost/admin-api": "^0.5.1",
     "@tryghost/content-api": "^1.2.5",
-    "eslint": "^6.0.1"
+    "eslint": "^6.0.1",
+    "lorem-ipsum": "^2.0.3"
   },
   "dependencies": {
     "dotenv": "^8.0.0",
